Colaboratory를 통해 생성됨

--- a/Part1_2.ipynb
+++ b/Part1_2.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMIKmWTRQegB0jTiBWxwvE3"
+      "authorship_tag": "ABX9TyOBWIaO0b1l5aDqmENYpEry"
     },
     "kernelspec": {
       "name": "python3",
@@ -1049,7 +1049,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1154,7 +1154,7 @@
       "metadata": {
         "id": "XLpg5-mujQVy"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1241,19 +1241,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "항공사의 고객 만족도를 개선을 위해 비행 만족도 예측 모델을 설계합니다.  \n",
-        "고객의 비행 만족도에 영향을 주는 다양한 요인들을 확인하고 어느 요소가 가장 중요한지 확인합니다.  \n",
-        "승객의 나이, 충성도, 탑승클래스 등의 승객의 조건에 따라 비행 만족도에 영향을 주는 요인들에 차이가 있는지 확인한다.   \n",
+        "데이터 시각화 및 머신러닝 모델해석을 통해 다음과 같은 문제들을 해결하고자 합니다.\n",
         "\n",
-        "완성된 머신러닝 모델을 통해 다음과 같은 문제들을 해결하고자 합니다.\n",
-        "\n",
-        "1. 비행거리와 비행 만족도에 상관관계가 있을까?  \n",
-        "1. 충성고객일수록 비행 만족도가 높은 경향을 띄는가?  \n",
-        "1. 좌석의 클래스에 따라 비행 만족도에 차이가 있을까?  \n",
-        "1. 고객이 납득 할만한 비행 지연시간은 어느정도인가?\n",
-        "1. 연령별로 만족도에 영향을 주는 요인들이 다를까?\n",
-        "1. 승객의 여행 목적에 따라 지연시간이 만족도에 끼치는 영향이 다르게 나타날까?\n",
-        "1. 고객의 비행 만족도에 가장 많은 영향을 주는 요인은 무엇일까?"
+        "1. 승객 만족도 개선에 가장 중요한 특성은 무엇인가요?\n",
+        "1. 비행 지연은 승객의 만족도에 어떤 영향을 주나요? 비행지연이 발생한 경우에는 어떻게 대처해야 할까요?\n",
+        "1. 나이, 비행 목적, 탑승클래스 등 승객의 조건에 따라 비행 만족도에 영향을 주는 특성들이 어떻게 달라질까요?\n"
       ],
       "metadata": {
         "id": "6TUMRVnmXvKh"
@@ -1271,13 +1263,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. 비행 거리가 짧을수록 비행 만족도가 높을것이다.\n",
-        "2. 충성고객일수록 비행 만족도가 높을것이다.\n",
+        "1. 비행거리가 짧을수록 비행 만족도가 높을 것이다.\n",
+        "2. 고객 충성도가 높을수록 비행 만족도도 높을 것이다.\n",
         "3. 높은 클래스의 좌석일수록 비행 만족도가 높을것이다.\n",
-        "4. 지연시간이 30분 이내라면 고객이 납득 할 수 있을것이다.\n",
+        "4. 지연시간이 30분 이내라면 고객의 만족도에 큰 영향이 없을 것이다.\n",
         "5. 연령별로 만족도에 영향을 주는 요인들이 다를것이다.\n",
         "6. Business Travel의 경우에 지연시간에 더 민감하게 반응할 것이다.\n",
-        "7. Seat comfort가 가장 많은 영향을 줄 것이다.\n"
+        "7. 데이터 특성 중 Seat comfort가 만족도에 가장 많은 영향을 줄 것이다.\n"
       ],
       "metadata": {
         "id": "lCIOlWQqbWw4"
@@ -1311,7 +1303,7 @@
       "metadata": {
         "id": "LoCasag0c_PP"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1328,7 +1320,7 @@
         "id": "tph3t5SndsIz",
         "outputId": "e0acbbc8-879a-4327-8351-e73582298838"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1745,7 +1737,7 @@
         "id": "z8P2cPyYW-Wq",
         "outputId": "3771f8a8-9616-4d46-ccc7-6e46d9dda771"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,7 +1764,7 @@
       "metadata": {
         "id": "RzO-N-TLng-T"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1787,7 +1779,7 @@
         "id": "2bDIbW9T4ZlV",
         "outputId": "93a185b9-e05a-4864-bd12-8ec6d7b2a0eb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1878,7 +1870,7 @@
         "id": "O2AaxhUXyp4q",
         "outputId": "5c36dd9b-c47a-4d86-ddf6-6c7865beb915"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -14008,7 +14000,7 @@
         "id": "mLk2RvVEYsfC",
         "outputId": "30dc4c24-f199-4012-87d1-be29d7415a02"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14085,7 +14077,7 @@
         "id": "PtAyu7BIb-NE",
         "outputId": "b8804c96-9f0f-4c81-9074-477f92bb8c94"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14603,7 +14595,7 @@
         "id": "ka8b21OmjMRS",
         "outputId": "d8945eb9-3688-4a7b-c434-983cb57f079b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -14640,7 +14632,7 @@
         },
         "outputId": "47866573-98b7-428f-c53c-587d2b19ab93"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14672,7 +14664,7 @@
         "id": "NhdxDrNm5XBT",
         "outputId": "dbb882d1-b9c5-42f0-8b52-5eef2789db48"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14707,7 +14699,7 @@
       "metadata": {
         "id": "UzHt5aONiqNj"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14722,7 +14714,7 @@
         "id": "CO-ll8D36eN5",
         "outputId": "2ebb91e1-5c76-46a8-9b1e-c04e280218be"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14796,7 +14788,7 @@
         "id": "gtckI6-PHzgL",
         "outputId": "e04f26ce-aed0-4298-b39e-7f187665b135"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -14837,7 +14829,7 @@
         "id": "hvfFxpBncVS7",
         "outputId": "1fffee78-facb-4358-bc33-f90d7e584b2f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15073,7 +15065,7 @@
         "id": "vapGuAx66Cr3",
         "outputId": "084b3039-b293-4112-ad8f-b2ffb372fc52"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15132,7 +15124,7 @@
         "id": "3DUNrvxmAJh9",
         "outputId": "c4ad13be-4bf8-4f08-ab47-db63f322e464"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -15397,7 +15389,7 @@
         "id": "lGQMZwxoOe6e",
         "outputId": "a0db7934-b22e-48e9-b9e8-bae27181e676"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -15425,7 +15417,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 가설2. 충성고객일수록 비행 만족도가 높을것이다."
+        "### 가설2. 2. 고객 충성도가 높을수록 비행 만족도도 높을 것이다."
       ],
       "metadata": {
         "id": "m_KRMMtrYF1z"
@@ -15466,7 +15458,7 @@
         "id": "ukXIVh6tY5yF",
         "outputId": "a1223a09-1e00-4bd4-f735-e60c987b77dd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -15531,7 +15523,7 @@
         "id": "aU7qQPBGYhgs",
         "outputId": "c4bc88d2-7661-4e09-d095-46e04047a853"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -15596,7 +15588,7 @@
       "metadata": {
         "id": "1bndAqs5KtSW"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -15650,7 +15642,7 @@
         "id": "poz6OSU_qy4F",
         "outputId": "32da73da-e709-441a-fa60-6dc766916b06"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -15692,7 +15684,7 @@
       "metadata": {
         "id": "5DZFBfayNufS"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     }
   ]
