Colaboratory를 통해 생성됨

--- a/Part4_6.ipynb
+++ b/Part4_6.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN3GSZ7mbogolTsHqANwsG+",
+      "authorship_tag": "ABX9TyN1A6ATbJjacWx/0o/r2RPm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -906,12 +906,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 가설7 고객의 비행 만족도에 가장 많은 영향을 주는 요인은 무엇일까?\n",
+        "### 가설7 데이터 특성 중 Seat comfort가 만족도에 가장 많은 영향을 줄 것이다\n",
         "\n",
-        "가설 : Seat comfort가 가장 많은 영향을 줄 것이다.\n",
-        "\n",
-        "가설과는 달리, 순열중요도를 통해 비행 만족도에 가장 많은 영향을 주는 요인은 고객의 여행목적임을 알 수 있었다.  \n",
-        "Seat comfort는 순열중요도 8번째에 위치해 있었다.\n"
+        "순열중요도를 통해 확인한 결과, 비행 만족도에 가장 많은 영향을 주는 요인은 고객의 여행목적임을 알 수 있었다.  \n",
+        "Seat comfort는 순열중요도 8번째에 위치해 있었다.  \n"
       ],
       "metadata": {
         "id": "WtJ56bGXCruU"
@@ -1051,7 +1049,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 가설4 지연시간이 30분 이내라면 고객이 납득 할 수 있을것이다."
+        "### 가설4 지연시간이 30분 이내라면 고객의 만족도에 큰 영향이 없을 것이다."
       ],
       "metadata": {
         "id": "3eWsq0YaQHsB"
